--- a/front-end/package.json
+++ b/front-end/package.json
@@ -33,9 +33,7 @@
   },
   "devDependencies": {
     "eslint-config-trybe-frontend": "1.3.1",
-    "stylelint": "14.6.0",
-    "stylelint-config-standard": "25.0.0",
-    "stylelint-order": "5.0.0"
+    "tailwindcss": "^3.3.2"
   },
   "eslintConfig": {
     "extends": [
