--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,7 +23,6 @@
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
     "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -35,6 +34,7 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "dotenv-webpack": "^8.0.1",
     "eslint-config-trybe-frontend": "1.3.1",
     "tailwindcss": "^3.3.2"
   },
